# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos/cli/ohos_cli_executable.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

config("ohos-arkts-config") {
  include_dirs = [
    "include",
    "${ability_runtime_innerkits_path}/runtime/include",
    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_runtime/context",
    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_bundle_manager_helper",
    "${ability_runtime_innerkits_path}/app_manager/include/appmgr",
    "${ability_runtime_innerkits_path}/ability_manager/include",
  ]
  cflags_cc = [ "-fexceptions" ]
}

arkts_script_deps = [
  "${ability_runtime_innerkits_path}/runtime:runtime",
  "${ability_runtime_native_path}/appkit:appkit_manager_helper",
  "${ability_runtime_native_path}/appkit:app_context",
  "${ability_runtime_native_path}/appkit:app_context_utils",
]

arkts_script_external_deps = [
  "ability_base:base",
  "bundle_framework:appexecfwk_core",
  "bundle_framework:appexecfwk_base",
  "c_utils:utils",
  "eventhandler:libeventhandler",
  "hilog:libhilog",
  "napi:ace_napi",
  "ipc:ipc_core",
  "json:nlohmann_json_static",
]

ohos_shared_library("arkts_script") {
  output_name = "arkts_script"

  use_exceptions = true
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_policy = "adaptive"
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "src/arkts_script.cpp",
    "src/js_arkts_script.cpp",
  ]

  configs = [
    ":ohos-arkts-config",
  ]

  public_configs = [
    ":ohos-arkts-config",
  ]

  deps = arkts_script_deps

  external_deps = arkts_script_external_deps

  install_enable = true
  subsystem_name = "ability"
  part_name = "ability_runtime"
}

ohos_cli_executable("ohos-arktsScript") {
  use_exceptions = true
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_policy = "adaptive"
    debug = false
  }
  branch_protector_ret = "pac_ret"

  cli_config_file = "config.json"

  sources = [
    "src/main.cpp",
  ]

  configs = [
    ":ohos-arkts-config",
  ]

  deps = [ ":arkts_script" ] + arkts_script_deps

  external_deps = arkts_script_external_deps

  install_enable = true
  install_images = [ "system" ]
  subsystem_name = "ability"
  part_name = "ability_runtime"
}
