# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

group("agent_common_target") {
  deps = [
    ":agent_card_utils",
    ":agent_semver",
  ]
}

config("agent_common_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("agent_semver") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  public_configs = [ ":agent_common_config" ]
  include_dirs = [ "include" ]
  sources = [ "src/sem_ver.cpp" ]

  subsystem_name = "ability"
  part_name = "ability_runtime"
}

ohos_shared_library("agent_card_utils") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  public_configs = [ ":agent_common_config" ]
  include_dirs = [
    "include",
    "${ability_runtime_innerkits_path}/ability_manager/include",
    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_bundle_manager_helper",
    "${ability_runtime_services_path}/common/include",
    "${agent_runtime_framework_path}/interfaces/inner_api/include",
  ]
  sources = [ "src/agent_card_utils.cpp" ]

  deps = [
    "${ability_runtime_native_path}/appkit:appkit_manager_helper",
    "${agent_runtime_framework_path}/interfaces/inner_api:agent_fwk",
    "${agent_runtime_framework_path}/services/common:agent_semver",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "ability"
  part_name = "ability_runtime"
}
